# diff-ai

./: .gitignore  README.md  pyproject.toml
.claude/commands/: diff-ai-feature-oneshot.md
diff_ai/: __init__.py  cli.py  config.py  diff_parser.py  git.py  handoff.py  output.py  review_mode.py  scoring.py  scoring_backend.py  standalone.py
diff_ai/plugins/: __init__.py
diff_ai/rules/: __init__.py  api_surface.py  base.py  config_changes.py  critical_paths.py  dangerous_patterns.py  dependency_changes.py  destructive_changes.py  docs_only.py  error_handling.py  magnitude.py  profile_signals.py  test_signals.py
examples/: config.toml  llm-review-packet-security.md  llm-review-packet.md
examples/patches/: auth-tighten.diff  migration-and-tests.diff
releases/: SHA256SUMS.txt
scripts/: build_releases.sh  publish_github_release.sh
skills/diff-ai-feature-oneshot/: SKILL.md
skills/diff-ai-feature-oneshot/agents/: openai.yaml
skills/diff-ai-feature-oneshot/references/: workflows.md
skills/diff-ai-feature-oneshot/scripts/: diff-ai  install-agents-policy.sh
tests/: __init__.py  helpers_cli.py  helpers_git.py  test_bundle_cli.py  test_cli.py  test_cli_e2e.py  test_config_and_rules_cli.py  test_diff_parser.py  test_handoff.py  test_integration_git_diff.py  test_output.py  test_plugins.py  test_review_modes.py  test_rules_additional.py  test_scoring.py  test_scoring_backend.py  test_standalone_cli.py
tests/fixtures/diffs/: new_and_deleted.diff  no_newline_marker.diff  simple.diff
